--- a/src/components/DealerArea/Cards/Cards.module.css
+++ b/src/components/DealerArea/Cards/Cards.module.css
@@ -12,6 +12,18 @@
     padding: 5px;
 }
 
+.back {
+
+}
+
+.front {
+
+}
+
+.flipped {
+    background: red;
+}
+
 .img {
     display: block;
     width: 100%;
