--- a/src/components/PlayerArea/Cards/Cards.module.css
+++ b/src/components/PlayerArea/Cards/Cards.module.css
@@ -10,10 +10,12 @@
 .item {
     width: 100px;
     padding: 5px;
+
 }
 
 .img {
     display: block;
     width: 100%;
     height: auto;
+    border-radius: 7px;
 }
