--- a/src/components/DealerArea/Cards/Card/Card.module.css
+++ b/src/components/DealerArea/Cards/Card/Card.module.css
@@ -14,6 +14,7 @@
     transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 1px;
+    cursor: pointer;
 }
 
 .front,
@@ -28,8 +29,8 @@
 .back {
     border-radius: 3px;
     overflow: hidden;
-    background: radial-gradient(ellipse at top, #e66465, transparent),
-    radial-gradient(ellipse at bottom, #4d9f0c, transparent);
+    background: radial-gradient(ellipse at top, #3dc9c0, transparent),
+    radial-gradient(ellipse at bottom, #f9d74d, transparent);
 }
 
 .front {
